<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:minWidth="100dp"
    android:padding="20dp"
    android:gravity="start"
    android:orientation="vertical"
    android:background="@drawable/iot_device_bg"
    android:layout_margin="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp">
        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:contentDescription="@string/selectIoT"
            android:src = "@drawable/iot"
            android:background="@android:color/transparent"
            android:id = "@+id/iotDeviceImageView"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight = "1"
            android:paddingStart="10dp"
            android:paddingEnd="1dp"
            android:textSize="25sp"
            android:text="@string/defaultIotText"
            android:layout_gravity="center"
            android:id = "@+id/iotNameText"
            android:gravity="center_vertical"
            android:textColor="@color/iotColor"
            android:maxLines="1"
            android:ellipsize="end" />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="1dp"
        android:paddingStart="20dp"
        android:paddingEnd="1dp"
        android:maxLines="4"
        android:id = "@+id/iotDeviceDescription"
        android:text="@string/additionalExplanation"
        android:textColor="@color/additionalExplanation" />
</LinearLayout>